[package]
name = "telegram-bot"
version = "0.7.3"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>", "Gustavo Aguiar <gustavo.h.o.aguiar@gmail.com>"]
edition = "2018"

description = "A library for creating Telegram bots"

documentation = "https://docs.rs/telegram-bot/"
repository = "https://github.com/telegram-rs/telegram-bot"
readme = "../README.md"

keywords = ["telegram", "bot", "chat", "api"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[features]
rustls = ["hyper-rustls"]
default = ["rustls"]

[dependencies]
bytes = "1.0"
tokio = { version = "1.0", features = ["fs"]}

tracing = "0.1"
tracing-futures = "0.2"
multipart = { version = "0.17", default-features = false, features = ["client"] }

telegram-bot-raw = { version = "0.7.0", path = "../raw" }

hyper = "0.14"
futures = "0.3"
hyper-rustls = { version = "0.22", optional = true }

[dev-dependencies]
tracing-subscriber = "0.2"
tokio = { version = "1.0", features = ["macros", "time", "fs", "rt-multi-thread"] }
